3.5.1/_sources/plot_types/arrays/imshow.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "plot_types/arrays/imshow.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_plot_types_arrays_imshow.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_plot_types_arrays_imshow.py:


=========
imshow(Z)
=========

See `~matplotlib.axes.Axes.imshow`.

.. GENERATED FROM PYTHON SOURCE LINES 8-24



.. image-sg:: /plot_types/arrays/images/sphx_glr_imshow_001.png
   :alt: imshow
   :srcset: /plot_types/arrays/images/sphx_glr_imshow_001.png, /plot_types/arrays/images/sphx_glr_imshow_001_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. code-block:: default


    import matplotlib.pyplot as plt
    import numpy as np

    plt.style.use('_mpl-gallery-nogrid')

    # make data
    X, Y = np.meshgrid(np.linspace(-3, 3, 16), np.linspace(-3, 3, 16))
    Z = (1 - X/2 + X**5 + Y**3) * np.exp(-X**2 - Y**2)

    # plot
    fig, ax = plt.subplots()

    ax.imshow(Z)

    plt.show()


.. _sphx_glr_download_plot_types_arrays_imshow.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: imshow.py <imshow.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: imshow.ipynb <imshow.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
