3.10.6/_sources/plot_types/arrays/imshow.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "plot_types/arrays/imshow.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_plot_types_arrays_imshow.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_plot_types_arrays_imshow.py:


=========
imshow(Z)
=========
Display data as an image, i.e., on a 2D regular raster.

See `~matplotlib.axes.Axes.imshow`.

.. GENERATED FROM PYTHON SOURCE LINES 9-25



.. image-sg:: /plot_types/arrays/images/sphx_glr_imshow_001.png
   :alt: imshow
   :srcset: /plot_types/arrays/images/sphx_glr_imshow_001.png, /plot_types/arrays/images/sphx_glr_imshow_001_2_00x.png 2.00x
   :class: sphx-glr-single-img





.. code-block:: Python


    import matplotlib.pyplot as plt
    import numpy as np

    plt.style.use('_mpl-gallery-nogrid')

    # make data
    X, Y = np.meshgrid(np.linspace(-3, 3, 16), np.linspace(-3, 3, 16))
    Z = (1 - X/2 + X**5 + Y**3) * np.exp(-X**2 - Y**2)

    # plot
    fig, ax = plt.subplots()

    ax.imshow(Z, origin='lower')

    plt.show()


.. _sphx_glr_download_plot_types_arrays_imshow.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: imshow.ipynb <imshow.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: imshow.py <imshow.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: imshow.zip <imshow.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
